@@ -30,6 +30,7 @@ bool c_ampersand (void);
 bool c_assert (void);
 bool c_cn (Symbol *symbol);
 bool c_cp (Symbol *symbol);
+bool c_data (void);
 bool c_dcb (void);
 bool c_dcw (bool doLowerCase);
 bool c_dcd (bool doLowerCase);
@@ -40,7 +41,6 @@ bool c_end (void);
 bool c_equ (Symbol *symbol);
 bool c_fn (Symbol *symbol);
 bool c_get (void);
-bool c_head (void);
 bool c_idfn (void);
 bool c_incbin (void);
 bool c_info (void);
