@@ -507,175 +507,6 @@ m_adr (bool doLowerCase)
   return false;
 }
 
-
-/* [0] Stack args      0 = no, 1..4 = a1-an; -1 = RET or TAIL will cause error
- * [1] Stack reg vars  0 = no, 1..6 = v1-vn
- * [2] Stack fp vars   0 = no, 1..4 = f4-f(3+n)
- */
-static int regs[3] = {-1, -1, -1};
-
-/**
- * Implements STACK : APCS prologue
- */
-bool
-m_stack (void)
-{
-  static const unsigned int lim[3] = {4, 6, 4};
-  static const ARMWord
-    arg_regs[]  = {0x00000000, 0xE92D0001, 0xE92D0003, 0xE92D0007, 0xE92D000F},
-    push_inst[] = {0xE92DD800, 0xE92DD810, 0xE92DD830, 0xE92DD870,
-		   0xE92DD8F0, 0xE92DD9F0, 0xE92DDBF0},
-    pfp_inst[]  = {0x00000000, 0xED2DC203, 0xED6D4206, 0xED6DC209, 0xED2D420C};
-
-  regs[2] = regs[1] = regs[0] = -1;
-  skipblanks ();
-  if (inputLook ())
-    {
-      int reg = 0;
-      char c;
-      do
-	{
-	  skipblanks ();
-	  switch (c = toupper (inputGet ()))
-	    {
-	    case 'A':
-	      reg = 0;
-	      break;
-	    case 'V':
-	      reg = 1;
-	      break;
-	    case 'F':
-	      reg = 2;
-	      break;
-	    default:
-	      error (ErrorError, "Illegal register class %c", c);
-	      break;
-	    }
-	  if (regs[reg] != -1)
-	    error (ErrorError, "Register class %c duplicated", c);
-	  if (Input_Match ('=', false))
-	    {
-	      const Value *im = exprBuildAndEval (ValueInt);
-	      int i;
-	      if (im->Tag != ValueInt)
-		{
-		  error (ErrorError, "No number of registers specified");
-		  i = 0;
-		}
-	      else
-		i = im->Data.Int.i;
-	      if ((unsigned)i  > lim[reg])
-		{
-		  error (ErrorError, "Too many registers to stack for class %c", c);
-		  i = 0;
-		}
-	      regs[reg] = i;
-	    }
-	  else
-	    regs[reg] = (signed) lim[reg];
-	  skipblanks ();
-	  c = inputLook ();
-	  if (c == ',')
-	    inputSkip ();
-	  else if (c)
-	    error (ErrorError, "%sregister class %c", InsertCommaAfter, c);
-	}
-      while (c);
-      if (c)
-	inputUnGet (c);
-    }
-  Put_Ins (0xE1A0C00D);
-  if (regs[0] < 0)
-    regs[0] = 0;
-  if (regs[0])
-    Put_Ins (arg_regs[regs[0]]);
-  if (regs[1] == -1)
-    regs[1] = 0;
-  Put_Ins (push_inst[regs[1]]);
-  if (regs[2] > 0)
-    Put_Ins (pfp_inst[regs[2]]);
-  Put_Ins (0xE24CB004 + 4 * regs[0]);
-  return false;
-}
-
-
-/** APCS epilogue **/
-
-static void
-apcsEpi (ARMWord cc, const int *pop_inst, const char *op)
-{
-  static const ARMWord pfp_inst[] =
-    {
-      0x00000000,
-      0x0CBDC203,
-      0x0CFD4206,
-      0x0CFDC209,
-      0x0CBD420C
-    };
-
-  if (regs[0] == -1)
-    error (ErrorError, "Cannot assemble %s without an earlier STACK", op);
-
-  if (regs[2] > 0)
-    Put_Ins (pfp_inst[regs[2]] | cc);
-  Put_Ins (pop_inst[regs[1]] | cc);
-}
-
-/**
- * Implements RET : APCS epilogue - return
- * ObjAsm extension.
- */
-bool
-m_ret (bool doLowerCase)
-{
-  static const int pop_inst[] =
-    {
-      0x095BA800,
-      0x095BA810,
-      0x095BA830,
-      0x095BA870,
-      0x095BA8F0,
-      0x095BA9F0,
-      0x095BABF0
-    };
-
-  ARMWord cc = optionCond (doLowerCase);
-  if (cc == optionError)
-    return true;
-
-  apcsEpi (cc, pop_inst, "RET");
-  return false;
-}
-
-/**
- * Implements TAIL : APCS epilogue - tail call
- */
-bool
-m_tail (bool doLowerCase)
-{
-  static const int pop_inst[] =
-    {
-      0x091B6800,
-      0x091B6810,
-      0x091B6830,
-      0x091B6870,
-      0x091B68F0,
-      0x091B69F0,
-      0x091B6BF0
-    };
-
-  ARMWord cc = optionCond (doLowerCase);
-  if (cc == optionError)
-    return true;
-
-  apcsEpi (cc, pop_inst, "TAIL");
-  skipblanks ();
-  if (inputLook ())
-    branch_shared (cc, false);
-  return false;
-}
-
-
 /* PSR access */
 
 static ARMWord
